# mealplan-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  run_mcp.py
.cursor/rules/: github-issue-formatting.mdc
.github/workflows/: ci.yml  release.yml
docs/: arch.md  brainstorm.md  prompt.md  spec.md
hack/: sample_dish.json  sample_meal_plan.json  test_export_pdf_input.json  test_meal_plans.py
mealplan_mcp/: __init__.py
mealplan_mcp/models/: __init__.py  dish.py  ignored.py  ingredient.py  meal_plan.py  meal_type.py  nutrient.py
mealplan_mcp/renderers/: __init__.py  grocery.py  mealplan.py
mealplan_mcp/services/: __init__.py
mealplan_mcp/services/dish/: __init__.py  list.py  store.py
mealplan_mcp/services/grocery/: __init__.py  generator.py
mealplan_mcp/services/ignored/: __init__.py  add.py  get.py
mealplan_mcp/utils/: __init__.py  paths.py  slugify.py
models/: __init__.py  dish.py  ingredient.py  meal_plan.py  meal_type.py  nutrient.py
tests/: __init__.py  test_create_mealplan_tool.py  test_export_mealplans_to_pdf_tool.py  test_grocery_generator.py  test_grocery_path.py  test_list_mealplans_tool.py  test_meal_plan_model.py  test_models.py  test_paths.py  test_slugify.py
tests/dish/: test_list_service.py  test_schema.py  test_store_service.py
tests/ignored/: __init__.py  test_add_service.py  test_get_service.py  test_model.py
tests/mealplan/: test_mealplan_list_service.py  test_mealplan_store_service.py  test_pdf_export_service.py
tests/renderers/: test_grocery.py  test_mealplan_renderer.py
(+4 files in other folders)
