[project]
name = "mealplan-mcp"
version = "0.1.0"
description = "Meal plan manager with MCP server integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "fastapi>=0.109.0",
    "pydantic>=2.0.0",
    "python-slugify>=8.0.0",
    "rich>=13.7.0",
    "reportlab>=4.0.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "anyio>=4.0.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "pyright>=1.1.350",
    "httpx>=0.28.1",
    "coverage-badge>=1.1.0",
]

mcp = [
    "reportlab>=4.0.0",
    "markdown>=3.5.0",
]

[tool.setuptools]
packages = ["mealplan_mcp"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=6.1.1",
]
